# ufeed_bindings_cpp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  OPEN-SOURCE-LICENSES.txt  README.md
cmake/: gcc.cmake  macros.cmake  msvc.cmake  submodule.cmake
include/ufeapi/: ufeapi.proto
include/ufecpp/: ufe_cpp_fields_fix40.hpp  ufe_cpp_fields_fix41.hpp  ufe_cpp_fields_fix42.hpp  ufe_cpp_fields_fix43.hpp  ufe_cpp_fields_fix44.hpp  ufe_cpp_fields_fix50.hpp  ufe_cpp_fields_fix50sp1.hpp  ufe_cpp_fields_fix50sp2.hpp  ufe_cpp_fields_fix50sp2_tas.hpp  ufeconfiguration.hpp  ufeconsts.hpp  ufecppdll.h  ufecppversion.h  ufeedclient.hpp  ufeexception.hpp  ufemessage.hpp
include/ufecpp/deprecated/: ufeapi.hpp
src/genconsts/: genconsts.cpp
src/samples/: CMakeLists.txt  sample0.cpp
src/test/: ufeedclient_test.cpp
src/ufeedclient/: ufeedclient.cpp
